--- a/templates/webmaster.html
+++ b/templates/webmaster.html
@@ -7,6 +7,7 @@
         .fc-header-title h2 {
             font-size: 90%;
         }
+    .btn {margin: 5px;}
     </style>
 {% endblock extra_head %}
 {% block main %}
@@ -29,6 +30,7 @@
                     <a href="{{ RABBITMQ_MONITOR_URL }}" class="btn btn-primary">RabbitMq Monitor</a>
                     <a href="/admin/django_logtail/log/" class="btn btn-primary">Log Files</a>
                     <a href="/test_email/" class="btn btn-primary">Send test emails</a>
+                    <a href="/test_sms/" class="btn btn-primary">Send test sms</a>
                     <hr />
                     <h5>Starting Celery Manually</h5>
                     <code>
