--- a/templates/web/booking_editable_template.html
+++ b/templates/web/booking_editable_template.html
@@ -64,7 +64,7 @@
        data-value="{% if object.client_ref %}{{ object.client_ref }}{% endif %}">
         {{ default_client_ref }}</a>
 
-    to start at
+    to start
     <a href="#" id="field_requested_time" class="editable when_time"
        data-pk="{{ object.ref }}"
        data-date="{{ object.requested_from|date:"Y-m-d" }}"
