--- a/templates/base.html
+++ b/templates/base.html
@@ -253,8 +253,7 @@
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu extended logout">
-                            <li><a href="#"><i class=" fa fa-suitcase"></i>Profile</a></li>
-                            <li><a href="#"><i class="fa fa-cog"></i> Settings</a></li>
+                            <li><a href="{% url "tuner-profile" user.id %}"><i class=" fa fa-suitcase"></i>Profile</a></li>
                             <li><a href="http://en.gravatar.com"><i class="fa fa-cog"></i> Get a Gravatar</a></li>
                             <li><a href="/logout/"><i class="fa fa-key"></i> Log Out</a></li>
                         </ul>
